[lworld] C2 compilation fails with assert(!has_phi_inputs(region)) failed: already cloned with phis

XMLWordPrintable

      # Internal Error (/scratch/mesos/slaves/1a7cca38-e299-473e-97af-f3151e5423d5-S71556/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1d9393a0-085e-49f9-b0a2-ad0b4bdf51e6/runs/b51925ac-3fe7-4726-8857-37d7b1ca1b8a/workspace/open/src/hotspot/share/opto/inlinetypenode.cpp:37), pid=78598, tid=41987
      # assert(!has_phi_inputs(region)) failed: already cloned with phis

      Current CompileTask:
      C2: 8068 1440 b 4 compiler.valhalla.inlinetypes.TestLWorld::test70Interface_verifier (27 bytes)

      Stack: [0x0000700006fc2000,0x00007000070c2000], sp=0x00007000070bd490, free space=1005k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x1162bbd] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6ed
      V [libjvm.dylib+0x11632f1] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x41
      V [libjvm.dylib+0x59c372] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
      V [libjvm.dylib+0x8419d9] InlineTypeBaseNode::clone_with_phis(PhaseGVN*, Node*)+0x49
      V [libjvm.dylib+0x841bf2] InlineTypeBaseNode::clone_with_phis(PhaseGVN*, Node*)+0x262
      V [libjvm.dylib+0x4542c6] PhiNode::Ideal(PhaseGVN*, bool)+0x606
      V [libjvm.dylib+0xecd4b0] PhaseIterGVN::transform_old(Node*)+0x150
      V [libjvm.dylib+0x84233d] InlineTypeBaseNode::merge_with(PhaseGVN*, InlineTypeBaseNode const*, int, bool)+0xed
      V [libjvm.dylib+0x45437e] PhiNode::Ideal(PhaseGVN*, bool)+0x6be
      V [libjvm.dylib+0xecd4b0] PhaseIterGVN::transform_old(Node*)+0x150
      V [libjvm.dylib+0xeccea6] PhaseIterGVN::optimize()+0x1f6
      V [libjvm.dylib+0x5469e0] Compile::inline_incrementally_cleanup(PhaseIterGVN&)+0x3d0
      V [libjvm.dylib+0x546fa4] Compile::inline_incrementally(PhaseIterGVN&)+0x2b4
      V [libjvm.dylib+0x53d52b] Compile::Optimize()+0x2db
      V [libjvm.dylib+0x53b2fc] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x144c
      V [libjvm.dylib+0x41e539] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x1c9
      V [libjvm.dylib+0x55b9e9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x709
      V [libjvm.dylib+0x55afec] CompileBroker::compiler_thread_loop()+0x34c
      V [libjvm.dylib+0x10c93e3] JavaThread::thread_main_inner()+0x2a3
      V [libjvm.dylib+0x10c4577] Thread::call_run()+0x1b7
      V [libjvm.dylib+0xe6642f] thread_native_entry(Thread*)+0x15f
      C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
      C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
      C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: