8252109: [lworld] C2 compilation fails with assert(!has_phi_inputs(region)) failed: already cloned with phis